# mipt

rost_proj/: db.sqlite3  fill_db_via_temp_tables.py  fill_test.py  get_data.py  pyproject.toml
rost_proj/config/: forms.py  settings.py  test_analysis.py  urls.py  views.py
rost_proj/log_files/: apps.py  db.sqlite3  fill_db.py  models.py  models_not_ready.py  parsing.py
rost_proj/log_files/migrations/: 0001_initial.py  0002_remove_code_type_id_remove_facts_table_id_and_more.py  0003_alter_api_unique_together_and_more.py
rost_proj/templates/: analysis.html  base_page.html  dashboard_page.html  main_page.html  report_page.html  upload_page.html
